2009.03.30

* Added update function to bindings wrapper.
* Stubbed out fetch, dump, and load functions.
* Added a graph function to the bindings wrapper.

2009.03.29

* Created a branch for doing the python RRDtool bindings integration.
* Added admin scripts for convenient branch management.
* Updated TODO.
* Added doctest for buildParameters.
* Updated the RRD class to take a backend parameter in the constructor and
modified the class to reference this assigned attribute in the rest of its
methods.
* Started putting together the bindings module.
* Cleaned up the part of the README that has the new bindings instructions in
it.
* Updated the Graph class to take a backend parameter in its constructor.
* Updated the README to include how to use graph.Graph with the python bindings
backend.
* Renamed backend.py to common.py for a container of backend functions that are
common to both types.
* Moved coerce and iterparse into common.
* Cleaned up imports.
* Fixed bindings.buildParameters and moved it into common.
* Updated external.buildParameters to use the one from common.

2009.03.26

* Moved meta data out of setup.py and into pyrrd.meta.
* Added docs directory and split docs out of README and added more info.
* Moved pyrrd/utils.py to pyrrd/util/__init__.py.
* Added pyrrd.util.dist.
* Updated setup.py to use meta as well as the new dist utility.
* Moved INSTALL content into README.
* Moved acknowledgements out of README and into their own file.
* Added file cleanups in doctests.
* Updated MANIFEST to include new docs and removed references to files that no
longer exist.
* Tweaked setup.py and dist module.
* Cleaned up parts of README that were causing problems in ReST rendering on
PyPI.
* Created an uploader for PyPI dists.

2009.03.23

* Added a file manifest so that files don't get left out during build process.
* Updated setup.py.
* Updated TODO.
* Incremented microversion to 0.0.6 since this is a bug fix (manifest file).
* Really incremented version.

2009.03.21
